--- a/app/scripts/views/search.html
+++ b/app/scripts/views/search.html
@@ -38,7 +38,7 @@
       <small ng-if="results.length > 0">{{ results.length }} results</small>
     </h2>
     <div class="favorite-switch switch round small">
-      <span>Show only favorited</span>
+      <span>Voir les favoris uniquement</span>
       <input id="FavRadioSwitch" type="checkbox" ng-model="favorite_mode">
       <label for="FavRadioSwitch"></label>
     </div>
