--- a/app/scripts/views/header.html
+++ b/app/scripts/views/header.html
@@ -20,7 +20,7 @@
           <ul class="dropdown">
             <li><a ui-sref="search">Search</a></li>
             <li><a ui-sref="profile">Profile</a></li>
-            <li><a ui-sref="overview">Overview</a></li>
+            <li><a ui-sref="overview">Reseaux</a></li>
             <li><a ui-sref="about">About</a></li>
           </ul>
         </li>
