--- a/app/scripts/views/header.html
+++ b/app/scripts/views/header.html
@@ -18,10 +18,10 @@
         <li class="has-dropdown">
           <a href="#">Menu</a>
           <ul class="dropdown">
-            <li><a ui-sref="search">Search</a></li>
-            <li><a ui-sref="profile">Profile</a></li>
+            <li><a ui-sref="search">Recherche</a></li>
+            <li><a ui-sref="profile">Portrait</a></li>
             <li><a ui-sref="overview">Overview</a></li>
-            <li><a ui-sref="about">About</a></li>
+            <li><a ui-sref="about">À propos</a></li>
           </ul>
         </li>
       </ul>
