--- a/app/scripts/views/header.html
+++ b/app/scripts/views/header.html
@@ -18,7 +18,7 @@
         <li class="has-dropdown">
           <a href="#">Menu</a>
           <ul class="dropdown">
-            <li><a ui-sref="search">Recherche</a></li>
+            <li><a ui-sref="search"><i class="fa fa-search"></i>Recherche</a></li>
             <li><a ui-sref="profile">Portrait</a></li>
             <li><a ui-sref="overview">Reseaux</a></li>
             <li><a ui-sref="about">À propos</a></li>
