Yet Another Icons

--- a/app/scripts/views/header.html
+++ b/app/scripts/views/header.html
@@ -6,7 +6,7 @@
       </li>
       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
       <li class="toggle-topbar menu-icon">
-        <a href="#">
+	<a href="#">
           <span>Menu</span>
         </a>
       </li>
@@ -16,12 +16,12 @@
     <!-- Right Nav Section -->
       <ul class="right">
         <li class="has-dropdown">
-          <a href="#">Menu</a>
+          <a href="#"><i class="fa fa-bars"></i>Menu</a>
           <ul class="dropdown">
             <li><a ui-sref="search"><i class="fa fa-search"></i>Recherche</a></li>
-            <li><a ui-sref="profile">Portrait</a></li>
-            <li><a ui-sref="overview">Reseaux</a></li>
-            <li><a ui-sref="about">À propos</a></li>
+            <li><a ui-sref="profile"><i class="fa fa-child"></i>Portrait</a></li>
+            <li><a ui-sref="overview"><i class="fa fa-flask"></i>Reseau</a></li>
+            <li><a ui-sref="about"><i class="fa fa-info"></i>À propos</a></li>
           </ul>
         </li>
       </ul>
