--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -153,7 +153,11 @@ nav.top-bar {
   }
 }
 
-
+.Contact-form {
+  &.loading {
+    opacity: .2;
+  }
+}
 .Profile .details {
     position         : fixed;
     top              : 0;
