--- a/app/scripts/views/profile.html
+++ b/app/scripts/views/profile.html
@@ -1,114 +1,123 @@
 
 
-<div class="Search Profile" relayout-search-view>
+<div class="panel">
 
-  <div class="results onLeft">
 
+<!-- TOOLTIP <span data-tooltip aria-haspopup="true" class="has-tip" data-options="show_on:large" title="couxà_">show on</span> -->
+
+
+
+<div class="Profile" relayout-search-view>
 
 <h1>
-  {{ profile.nickname }}
+  {{ profile.nickname }} !
 </h1>
 
-    <div class="large-6 columns">
-
+    <div class="large-6 /columns">
     	<div class=" filter-box">
+               <div class="large-5  /columns">
+                <select
+                    ng-model   = "search_params.selected_category" 
+                    ng-change  = "onCategorySelected()"
+                    ng-options = "cat as cat.title for cat in categories">
+                    <option value="">-- Choisissez une catégorie --</option>
+                  </select>
 
 
-                 <div class="row">
-                    <div class="large-5  columns">
-                
-             <!--            <dd
-                              ng-repeat = "cat in categories"
-                              ng-click  = "toggleMotivation(motivation)"
-                              ng-class  = "{'active': isMotivationSelected(motivation) }">
-                              <a href="#" ng-bind-html="cat.title"></a>
-                            </dd>
-                    -->
-                      <select
-                          ng-model   = "search_params.selected_category" 
-                          ng-change  = "onCategorySelected()"
-                          ng-options = "cat as cat.title for cat in categories">
-                          <option value="">-- Choisissez une catégorie --</option>
+              </div>
+            </div>
+            <div class="/row">
+
+             
+                  <div ng-if="search_params.selected_category">
+
+                      <div class="large-6 /columns">
+                        <div 
+                          class=""
+                          ng-model="search_params.  selected_category" 
+                          ng-bind-html="search_params.  selected_category">
+                            <a></a>
+                        </div>
+
+
+                        <select ng-model="search_params.selected_category.motivations_selected" ng-options="motiv as motiv.label for motiv in search_params.selected_category.motivations">
+                          <option value="">-- Choisissez une motivation --</option>
                         </select>
-                    </div>
-
-                    <div class="large-8  columns">
-                        <div ng-if="search_params.selected_category">
-                            <div class="large-6 columns">
-                              <select ng-model="search_params.selected_category.motivations_selected" ng-options="motiv as motiv.label for motiv in search_params.selected_category.motivations">
-                                <option value="">-- Choisissez une motivation --</option>
-                              </select>
-                            </div>
-                        <!-- 
-                            <dt>Motivations : </dt>
-                            <dd ng-class="{'active' : search_params.motivations_selected.length == search_params.selected_category.motivations.length }">
-                            </dd>
-                         
-                            <dd
-                              ng-repeat = "motivation in search_params.selected_category.motivations"
-                              ng-click  = "toggleMotivation(motivation)"
-                              ng-class  = "{'active': isMotivationSelected(motivation) }">
-                              <a href="#profile" ng-bind-html="motivation.label" class=""></a>
-
-                            </dd> -->
-                       
-
-
-
-
-                        <div class="large-6 columns">
-                            <input 
-                                type="text"
-                                class="title"
-                                placeholder="Titre"
-                              ng-model   = "search_params.title" 
-                              ng-focus  = "onTitleChange()" />
-                        </div>
-
-                        <div class="large-4 columns">
-                            <a  ng-click  = "add()" class="button">
-                                <i class  = "fa fa-plus"></i> Ajouter</a>
-                        </div>
-                    </div>  
-                        
-                </div>
-
-
+                      </div>
+                  <!-- 
+                      <dt>Motivations : </dt>
+                      <dd ng-class="{'active' : search_params.motivations_selected.length == search_params.selected_category.motivations.length }">
+                      </dd>
                    
-               </div>
-                 <div class="row"> 
-                     <div class="large-6 columns">
-                        <ul>
-                          <li 
-                            ng-repeat = "result in profile.entries" 
-                            id        = "entry_{{result.id}}"
-                            ng-class  = "{'visited': visited_results[result.id], 'active': result.id == entry_selected.id}">
-                            <a
-                              ng-click     = "focusOnEntry(result)"
-                              ng-bind-html = "result.category.title" 
-                              class="medium label"
-                              ></a>
-                            <a
-                              ng-click     = "focusOnEntry(result)"
-                              ng-bind-html = "result.smart_title" 
-                              ></a>
-                          </li>
-                        </ul>
-                    </div> 
-                </div>
-            </div> <!-- filter-->
+                      <dd
+                        ng-repeat = "motivation in search_params.selected_category.motivations"
+                        ng-click  = "toggleMotivation(motivation)"
+                        ng-class  = "{'active': isMotivationSelected(motivation) }">
+                        <a href="#profile" ng-bind-html="motivation.label" class=""></a>
+
+                      </dd> -->
+                 
 
 
-    </div><!-- filtercolumns-->
 
-    <div class="large-3 columns">
+
+                  <div class="large-8 /columns">
+                      <input 
+                          type="search"
+                          class="title"
+                          placeholder="Titre"
+
+                        ng-model   = "search_params.title" 
+                        ng-focus  = "onTitleChange()" />
+                  </div>
+
+                  <div class="large-5 /columns">
+                      <a  ng-click  = "add()" class="button">
+                          <i class  = "fa fa-plus"></i> Ajouter</a>
+                  </div>
+      
+                  
+          </div>
+
+
+             
+         </div>
+           <div class="/row"> 
+               <div class="large-6 /columns">
+                  <ul>
+                    <li 
+                      ng-repeat = "result in profile.entries" 
+                      id        = "entry_{{result.id}}"
+                      ng-class  = "{'visited': visited_results[result.id], 'active': result.id == entry_selected.id}">
+                      <a
+                        ng-click     = "focusOnEntry(result)"
+                        ng-bind-html = "result.category.title" 
+                        class="medium label"
+                        ></a>
+                      <a
+                        ng-click     = "focusOnEntry(result)"
+                        ng-bind-html = "result.smart_title" 
+                        ></a>
+                    </li>
+                  </ul>
+              </div> 
+          </div>
+      </div> <!-- filter-->
+
+
+    </div><!-- filter/columns-->
+
+    <div class="/large-3 /columns">
       <div
         class="/details"
         ng-show="entry_selected">
         <a
           class="close-details"
           ng-click="entry_selected = undefined">&#215;</a>
+          <a href="#" ng-click="delete(entry_selected)">supprimer</a>
+          form
         <ng-include src="'scripts/views/entry.html'"></ng-include>
+
       </div>
 
       <pre>{{ profile | json }}</pre>
@@ -119,3 +128,11 @@
 
 </div><!-- Profile-->
     
+</div><!-- Panel-->    
+<div class="panel">
+<ul class="small-block-grid-3"
+    ng-repeat = "cat in categories"
+  >
+    <li href="#" ng-bind-html="cat.title"></li>
+  </ul>
+</div>
