--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -158,25 +158,7 @@ nav.top-bar {
     opacity: .2;
   }
 }
-.Profile .details {
-    position         : fixed;
-    top              : 0;
-    right            : 0;
-    z-index          : 7;
-    left             : 0;
-    width            : 5%;
-    overflow         : auto;
-    background-color : white;
-    box-shadow       : 0px -20px 0px rgba($primary-color, 0.51);
-    opacity          : .95;
-    padding          : 20px;
-    transition-property: top;
-    transition-duration: .5s;
-    &.ng-hide{
-      display : block !important;
-      top     : 1000px !important;
-    }
-}
+
 .details__wrapper {
     h2.subheader {
 	line-height: 1em;
@@ -192,5 +174,7 @@ i.fa {
     font-size:0.8em;
   }
 }
-
+.profile_header{
+    
+}
 // EOF
