--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -118,6 +118,7 @@ nav.top-bar {
         transition-property : background-color;
         &.active {
           background-color: rgba(234, 234, 234, 1);
+          color: rgba(0,0, 0, 1);
         }
         &:before {
           content     : '\f0a3';
@@ -132,9 +133,11 @@ nav.top-bar {
         }
         &.favorited:before {
           content     : '\f005' !important;
+          color : rgba($primary-color, 1);
         }
         &.active {
           background-color: rgba(234, 234, 234, 1);
+          color : rgba($primary-color, 1);
         }
       }
     }
@@ -156,6 +159,7 @@ nav.top-bar {
 .Contact-form {
   &.loading {
     opacity: .2;
+
   }
 }
 
