--- a/app/scripts/views/overview.html
+++ b/app/scripts/views/overview.html
@@ -1,8 +1,14 @@
-<h1>Réseaux des participants</h1>
-<leaflet 
-    width="640px" 
-    height="480px" 
-    defaults="defaults" 
-    tiles="tiles"
-    markers="markers">
-</leaflet>
+<div class="overview container">
+  <div class="large-10 columns">
+    <leaflet 
+       width="100%" 
+       height="650px" 
+       defaults="defaults" 
+       tiles="tiles"
+       markers="markers">
+    </leaflet>
+  </div>
+  <div class="large-2 columns">
+    <h1>Le réseau des collectivités</h1>
+  </div>
+</div>
