--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -158,6 +158,7 @@ nav.top-bar {
     opacity: .2;
   }
 }
+
 .Profile .details {
     position         : fixed;
     top              : 0;
@@ -177,6 +178,7 @@ nav.top-bar {
       top     : 1000px !important;
     }
 }
+
 .details__wrapper {
     h2.subheader {
 	line-height: 1em;
@@ -190,9 +192,52 @@ i.fa {
 div.about.row .columns {
     min-height: 250px;
 }
+
 .Profile {
   h1 {
     font-size:0.8em;
   }
 }
+
+.about {
+    .circular {
+	width                 : 150px;
+	height                : 150px;
+	border-radius         : 75px;
+	-webkit-border-radius : 75px;
+	-moz-border-radius    : 75px;
+	background            : url("/images/doud.jpg") no-repeat;
+    }
+
+    .circular img {
+	opacity: 0;
+	width: 150px;
+	height: 150px;
+    }
+
+    section {
+	display: block;
+    }
+}
+
+.overview.container {
+    .columns.large-10 {
+	padding-left : 0;
+	display: block;
+    }
+}
+
+footer {
+  width: 100%;
+  margin: 0;
+  position: relative;
+  min-height: 150px;
+  bottom: 0;
+  background-color: #2F2F2F;
+  color: #c6c6c6;
+  p {
+      font-size: 80%;
+  }
+}
+
 // EOF
