--- a/app/scripts/views/header.html
+++ b/app/scripts/views/header.html
@@ -20,6 +20,7 @@
             <li><a ui-sref="search"><i class="fa fa-search"></i>Recherche</a></li>
             <li><a ui-sref="profile"><i class="fa fa-child"></i>Portrait</a></li>
             <li><a ui-sref="overview"><i class="fa fa-flask"></i>Le réseau</a></li>
+            <li><a ui-sref="column"><i class="fa fa-flask"></i>PingPong</a></li>
             <li><a ui-sref="about"><i class="fa fa-info"></i>À propos</a></li>
           </ul>
         </li>
