scroll to message textarea and hide it when entry changes

--- a/app/scripts/views/entry.html
+++ b/app/scripts/views/entry.html
@@ -19,6 +19,7 @@
     class         = "Contact-form" 
     ng-class      = "{'loading': loading}"
     ng-show       = "contact_form.show"
+    scroll-if     = "contact_form.show"
     ng-controller = "ContactCtrl">
     <h3>Répondre</h3>
     <textarea ng-model="answer"></textarea>
