Mise à jour de la doc, notamment comment déployer sur Bitbucket-Pages

--- a/app/scripts/views/about.html
+++ b/app/scripts/views/about.html
@@ -2,7 +2,7 @@
   <section class="container" id="platforms">
     <div class="row">
       <h1>L'API REST</h1>
-      <h2>Une nouvelle façon d'intéragir avec les plate-formes</h2>
+      <h2>Une nouvelle façon d'interagir avec les plate-formes</h2>
       <p class="large-8 columns panel">
 	Qu’est ce que une API ?  C’est une façade par laquelle un
 	logiciel offre des services à d'autres logiciels. Elle est offerte
