--- a/app/scripts/views/about.html
+++ b/app/scripts/views/about.html
@@ -30,8 +30,8 @@
 	    également participer</li>
 	</ul>
       </p>
-      <p class="large-4 columns circular">
-	<img src="/images/doud.jpg" alt="C'est Doud" />
+      <p class="large-4 columns">
+	
       </p>
     </div>
   </section>
@@ -44,8 +44,8 @@
 	des projets non prévus à priori par les modules classiques des
 	applications (sous réserve d’étude préalable par nos soins).
       </p>
-      <p class="large-4 columns circular">
-	<img src="/images/doud.jpg" alt="C'est Doud" />
+      <p class="large-4 columns circular seychelles">
+	<img src="/images/seychellen-sonnenuntergang.png" alt="C'est bo les Seychelles on dirait le Laos" />
       </p>
     </div>
   </section>
@@ -98,54 +98,61 @@
       </p> 
     </div>
   </section>
-  <section class="row">
-    <p class="large-4 columns circular">
-      <img src="/images/doud.jpg" alt="C'est Doud" />
-    </p>
-    <p class="large-8 columns">
-      Par rapport à l’ouverture de l’application d’Etyssa en license
-      Libre et / ou Open Source, la consommation de l’API vous laisse plus
-      de libertés dans les technologies utilisées (vous pouvez utiliser
-      celle de votre choix, ce qui demande peu d’investissements et vous
-      permet de manipuler l’API avec les outils de votre choix). Vous
-      n’avez pas de serveur ni de base de données à gérer.
-    </p>
+  <section class="container" id="why">
+    <div class="row">
+      <h2>Quelles sont les avantages pour moi, collectivité ?</h2>
+      <p class="large-8 columns left">
+	Vous n’avez pas de serveur ni de base de données à gérer.
+	Par rapport à l’ouverture de l’application d’Etyssa en license
+	Libre et / ou Open Source, la consommation de l’API vous laisse plus
+	de libertés dans les technologies utilisées (vous pouvez utiliser
+	celles de votre choix, ce qui demande peu d’investissements).
+      </p>
+      <p class="large-4 columns circular">
+      </p>
+      <p class="large-8 columns left">
+	L’intégration à votre site web est entièrement libre, vous
+	disposez des données structurées. Cela demande l’intervention
+	d’un-e développeur-e, mais nous envisageons aussi de travailler
+	sur une intégration <em>clé-en-main</em> ressemblant à celles
+	qui vous permettent déjà d’exporter vos modules.
+      </p>
+      <p class="large-8 columns left" id="modern">
+	Pour Etyssa, le développement de l’API ouvre la voie à
+	l’utilisation de technologies plus modernes, basées sur des
+	outils Open Source, utilisant toute la réactivité des outils JS
+	client, tout en se reposant sur les socles éprouvés de
+	notre moteur de profiling et une base de données bien garnie.
+      </p>
+      <p class="large-4 columns circular">
+	<img src="/images/all.png" alt="C'est Doud" />
+      </p>
+    </div>
   </section>
-  <section class="row">
-    <p class="large-8 columns">
-      Pour Etyssa, le développement de l’API ouvre la voie à
-      l’utilisation de technologies beaucoup plus modernes, basées sur des
-      outils Open Source, tout en se reposant sur les socles éprouvés de
-      notre moteur de profiling et une base de données bien garnie.
+  <section class="container" id="hack">
+    <div class="row">
+      <p class="large-4 columns circular">
+	<img src="/images/doud.jpg" alt="C'est Doud" />
+      </p>
+      <p class="large-8 columns">
+	Présentation de l'implémentation réalisées par Edouard &
+	Etyssa
       
-      Les atouts sont la rapidité, flexibilité, réactivité (JS client),
-    l' angularité.
-    </p>
-    <p class="large-4 columns circular">
-      <img src="/images/doud.jpg" alt="C'est Doud" />
-    </p>
+	Pendant 10 jours, Etyssa a travaillé en collaboration avec Edouard
+	Richard lors d'un hackathon en novembre 2014 afin... 
+	TODO Technologies utilisées : JSON, Node.js, Angular.js, CoffeeScript
+	TODO BUTTONS liens Twitter, Github
+	
+	TODO récupérer les sources
+	https://bitbucket.org/scriptx/nextysse
+      </p>
+    </div>
   </section>
-  <section class="row">
-    <p class="large-4 columns circular">
-      <img src="/images/doud.jpg" alt="C'est Doud" />
-    </p>
-    <p class="large-8 columns">
-      Présentation de l'implémentation réalisées par Edouard &
-      Etyssa
-      
-      Pendant 10 jours, Etyssa a travaillé en collaboration avec Edouard
-      Richard lors d'un hackathon en novembre 2014 afin... 
-      TODO Technologies utilisées : JSON, Node.js, Angular.js, CoffeeScript
-      TODO BUTTONS liens Twitter, Github
-      
-      TODO récupérer les sources
-      https://bitbucket.org/scriptx/nextysse
-    </p>
+  <section class="row" id="team">
+    <div class="large-12 columns">
+      <h2>That is the team</h2>
+      <img src="images/ed_and_ol.jpg" />
+      <img src="images/seb.jpg" />
+    </div>
   </section>
-</div>
-<div class="row">
-  <p>That is the team</p>
-  
-  <img src="images/ed_and_ol.jpg" />
-  <img src="images/seb.jpg" />
 </div>
