--- a/app/scripts/views/about.html
+++ b/app/scripts/views/about.html
@@ -4,15 +4,21 @@
       <h1>L'API REST</h1>
       <h2>Une nouvelle façon d'interagir avec les plate-formes</h2>
       <p class="large-8 columns panel">
-	Qu’est ce que une API ?  C’est une façade par laquelle un
+	Qu’est ce que une 
+	<a href="https://fr.wikipedia.org/wiki/Interface_de_programmation">API</a>
+	? 
+	C’est une <cite>façade par laquelle un
 	logiciel offre des services à d'autres logiciels. Elle est offerte
-	par une bibliothèque logicielle ou un service web, le plus souvent
+	par une 
+	<a href="https://fr.wikipedia.org/wiki/Biblioth%C3%A8que_logicielle">bibliothèque
+	  logicielle</a> 
+	ou un <a href="https://fr.wikipedia.org/wiki/Service_web">service web</a>, le plus souvent
 	accompagnée d'une description qui spécifie comment des programmes
 	consommateurs peuvent se servir des fonctionnalités du programme
-	fournisseur .
+	fournisseur</cite>.
       </p>
       <p class="large-8 columns panel right">
-	Etyssa met à disposition une API REST, soit un ensemble structuré
+	Etyssa va mettre à votre disposition une API REST, soit un ensemble structuré
 	d’URLs permettant de directement consulter et éditer vos données
 	de plate-formes. Il y a au moins deux cas d’utilisations de ces
 	données :
@@ -108,14 +114,14 @@
 	de libertés dans les technologies utilisées (vous pouvez utiliser
 	celles de votre choix, ce qui demande peu d’investissements).
       </p>
-      <p class="large-4 columns circular">
-      </p>
       <p class="large-8 columns left">
 	L’intégration à votre site web est entièrement libre, vous
 	disposez des données structurées. Cela demande l’intervention
 	d’un-e développeur-e, mais nous envisageons aussi de travailler
 	sur une intégration <em>clé-en-main</em> ressemblant à celles
 	qui vous permettent déjà d’exporter vos modules.
+      </p>
+      <p class="large-4 columns circular">
       </p>
       <p class="large-8 columns left" id="modern">
 	Pour Etyssa, le développement de l’API ouvre la voie à
@@ -124,23 +130,42 @@
 	client, tout en se reposant sur les socles éprouvés de
 	notre moteur de profiling et une base de données bien garnie.
       </p>
-      <p class="large-4 columns circular">
-	<img src="/images/all.png" alt="C'est Doud" />
-      </p>
     </div>
   </section>
   <section class="container" id="hack">
     <div class="row">
-      <p class="large-4 columns circular">
-	<img src="/images/doud.jpg" alt="C'est Doud" />
+      <h2>La collaboration avec Édouard Richard</h2>
+      <h3>Présentation</h3>
+      <p class="large-12 columns left">
+	Lors d’un <em>hackathon</em> qui a eu lieu en novembre 2014, nous avons
+	finalisé une première version de l’API, et développé des
+	démonstrations des fonctionnalités possibles: il
+	s’agit d’applications entièrement autonomes, déployables
+	facilement et réalisées avec des technologies 100% Open
+	Sources. 
+
+	À ce jour, sont possibles :
       </p>
-      <p class="large-8 columns">
-	Présentation de l'implémentation réalisées par Edouard &
-	Etyssa
-      
-	Pendant 10 jours, Etyssa a travaillé en collaboration avec Edouard
-	Richard lors d'un hackathon en novembre 2014 afin... 
-	TODO Technologies utilisées : JSON, Node.js, Angular.js, CoffeeScript
+      <ul class="large-12 columns left">
+	<li>la recherche d’annonces par univers</li>
+	<li>la recherche par filtres à l’intérieur d’un univers</li>
+	<li>la réponse à un message (avec connection au compte utilisateur)</li>
+	<li>visualisation dynamique des résultats sur carte Open Street Map</li>
+	<li>rajouter une annonce à ses favoris</li>
+      </ul>
+      <p class="circular doud">
+      </p>
+      <p class="techno large-6 columns">
+	<h3>Technologies utilisées</h3>
+	<span class="label">Angular.js</span> <span class="label">Node.js</span> <span class="label">Angular.js</span>
+	<span class="label">CoffeeScript</span class="label"> <span class="label">Foundation</span>
+      <p class="large-6 columns panel">
+	<a href="https://github.com/vied12">Édouard Richard</a> est un développeur talentueux, un des plus
+	doués de sa génération (celle bien entendu des pokemons), il a
+	notamment collaboré chez <a href="http://www.jplusplus.org/fr/">Journalism++</a> depuis 2012 et chez
+	Etyssa en 2009.
+      </p>
+      <p>	
 	TODO BUTTONS liens Twitter, Github
 	
 	TODO récupérer les sources
