--- a/app/scripts/views/header.html
+++ b/app/scripts/views/header.html
@@ -11,18 +11,20 @@
         </a>
       </li>
     </ul>
+
     <section class="top-bar-section">
     <!-- Right Nav Section -->
+    <!--
       <ul class="right">
         <li class="has-dropdown">
           <a href="#"><i class="fa fa-bars"></i>Menu</a>
           <ul class="dropdown">
             <li><a ui-sref="search"><i class="fa fa-search"></i>Recherche</a></li>
-            <li><a ui-sref="overview"><i class="fa fa-flask"></i>Le réseau</a></li>
+           <li><a ui-sref="overview"><i class="fa fa-flask"></i>Le réseau</a></li> 
             <li><a ui-sref="about"><i class="fa fa-info"></i>À propos</a></li>
           </ul>
         </li>
       </ul>
-    </section>
+    </section>-->
   </nav>
 </div>
